--- a/css/custom.css
+++ b/css/custom.css
@@ -4,3 +4,14 @@ body{
 div.row1{
 	text-align: center;
 }
+div.carousel-inner{
+	text-align: center;
+}
+#MOBeef{
+height: 80%;
+width: 80%;
+}
+
+section.Snacks{
+	text-align: center;
+}
