so many changes

--- a/css/custom.css
+++ b/css/custom.css
@@ -27,3 +27,13 @@ section.Burgers{
 	text-align: center;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
+
+section.SidesBurgerBattleFries{
+	text-align: center;
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
+
+section.SpecialsSalads{
+	text-align: center;
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
