--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,17 @@
-body{
+#home{
 	background-color: white;
  
 }
+
+#menu{
+	background-color: white;
+
+}
+
+#contact{
+	background-color: white;
+}
+
 
 div.row1{
 	text-align: center;
@@ -9,6 +19,7 @@ div.row1{
 div.carousel-inner{
 	text-align: center;
 }
+
 #Beef{
 height: 70%;
 width: 70%;
