--- a/css/custom.css
+++ b/css/custom.css
@@ -30,6 +30,11 @@ width: 70%;
 	width: 70%;
 }
 
+#range{
+	height: 50%;
+	width: 50%;
+}
+
 section.hours{
 	text-align: center;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
